# voiceAI

./: .gitignore  ex01.py  gpu_check.py  readme.md  requirements.txt  sample.env
LLM/: readme.md
LLM/ollama/: .gitignore  ollama_ssl_proxy.py  readme.md  sample.env  test.http
LLM/pub/: index.html  index.js  main.css
STT/: app.py  asr_protocol.md  check_torch.py  gpu_check.py  model_downloader.py  readme.md  server.py
STT/agent/: VoiceDetector.py
STT/client/: stt_client.py  test.py
STT/example/: ex01.py  ex02.py  test3.webm
STT/stenoApp/: app.py  readme.md  todolist.md
STT/test/: ping.py  stt.py
TTS/: app.py  config.txt  datasetdownload.py  protocol.md  readme.md  server.py  server_fastapi.py  test_client.py
TTS/example/: mms_tts.py  ov_ex01.py
VAD/: .gitignore  AudioPlayer.py  TcpVadServerApp.py  VADProcessorSilero.py  VadChecker.py  app.py  gpu_check.py  main.py  mp4_to_server.py  playmp4snd.py  pyproject.toml  readme.md  server.py
VAD/client/: app.py  config.py  io_client.py  stt_sender.py  utils.py
adminTool/: main.py  readme.md
adminTool/pages/: 1_ASR.py  2_TTS.py  about.py
adminTool/utils/: ServerChecker.py
example/: eleven_tts.py  mms_tts.py
llm/: AISALab_LLM-based Drone Control System.py
misoVoice11/: index.js  nodemon.json  package.json
misoVoice11/api_test/: asr.http  voice.http
misoVoice11/routers/: asr.js  auth.js  base.js  elevenvoice.js
public/: index.html  index.js
public/eleven/: index.js
public/libs/: miclibs.js
public/tts/: index.html  index.js
server/: index.js  package.json  readme.md
(+25 files in other folders)
